[tool.poetry]
name = "til"
version = "0.1.0"
description = "Today I Learned"
authors = ["tighug <tighug.4696@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = "^8.2.15"
mkdocs-git-revision-date-localized-plugin = "^1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
